
wxMSW:

- Fixed wxWindow::IsShown (::IsWindowVisible doesn't behave as
  expected).
- Changed VC++ makefiles (.vc) so that it's possible to have
  debug/release/DLL versions of the library available simultaneously,
  with names wx.lib, wx_d.lib, wx200.lib(dll), wx200_d.lib(dll).
- Added BC++ 5 IDE files and instructions.
- Fixed wxChoice, wxComboBox constructor bugs (m_noStrings initialisation).

wxMotif:

- Cured asynchronous wxExecute crash.

General:

- wxLocale documented.
- Added include filenames to class reference.
- wxHelpController API changed: SetBrowser becomes SetViewer,
  DisplaySection works for WinHelp, help sample compiles under Windows
  (though doesn't display help yet).

Beta 4, February 12th 1999
--------------------------

wxGTK:

- Miscellaneous fixes.

wxMSW:

- Makefiles for more compilers and samples; Cygwin makefiles
  rationalised.
- Added VC++ project file for compiling wxWindows as DLL.

wxMotif:

- Added OnEraseBackground invocation.
- Added wxRETAINED implementation for wxScrolledWindow.
- Cured scrolling display problem by adding XmUpdateDisplay.
- Tried to make lex-ing in the makefile more generic (command line
  syntax should apply to both lex and flex).
- Changed file selector colours for consistency (except for buttons:
  crashes for some reason).
- Fixed wxMotif version of wxImage::ConvertToBitmap (used new instead
  of malloc, which causes memory problems).

General:

- Further doc improvements.
- wxGenericValidator added.
- Added wxImageModule to image.cpp, so adds/cleans up standard handlers
  automatically.

Beta 3, January 31st 1999
-------------------------

wxGTK:

- wxClipboard/DnD API changes (still in progress).
- wxToolTip class added.
- Miscellaneous fixes.

wxMSW:

- wxRegConfig DeleteAll bug fixed.
- Makefiles for more compilers.
- TWIN32 support added.
- Renamed VC++ makefiles from .nt to .vc, and
  factored out program/library settings.
- Fixed wxIniConfig bug.

wxMotif:

- A few more colour fixes.